2005-04-18 François Proulx <francois.proulx@gmail.com>
	* Added Flickr content support
	* Part of File object is done
	
2005-04-19 Benoit Grégoire  <bock@step.polymtl.ca>
	* Working (beta...) content manager and portal.
	* Add content preview mode
	
2005-04-18 Benoit Grégoire  <bock@step.polymtl.ca>
	* Hotspot and network content association, continue access control work.
	* hotspot_owner.php: Fix wrong assignement of user_id that prevented the script from working.
	* All files:  Remove whitespace and carriage return after the ?> closing tags.
	
2005-04-18 Benoit Grégoire  <bock@step.polymtl.ca>
	* Much more complete admin, initial access control work.

2005-04-15 Benoit Grégoire  <bock@step.polymtl.ca>
	* Support more of the content object model, do a half-decent CSS for the admin interface.

2005-04-14 Benoit Grégoire  <bock@step.polymtl.ca>
	* Content.php:  Use full langstring interface by default;

2005-04-14 Benoit Grégoire  <bock@step.polymtl.ca>
	* Content.php:  Fix db reference;

2005-04-14 Benoit Grégoire  <bock@step.polymtl.ca>
	* Fix Content object enumeration preventing usage of admin interface
	* Partial fix for RSS feed encoding (multiple feed aggregation still broken);

2005-04-14 Benoit Grégoire  <bock@step.polymtl.ca>
	* First part of the future content delivery infrastructure.  Many files added.

2005-04-01 François Proulx  <francois.proulx@gmail.com>
	* Modified gen.sh script to match UTF-8
	* Added PAP RADIUS encryption support ( asked by Paris Sans Fil )
	
2005-04-01 Benoit Grégoire  <bock@step.polymtl.ca>
	* wifidog/templates/auth_sources_selection.html:  Add missing file from francois's commit.

2005-04-01 Philippe April <philippe@ilesansfil.org>
	* Fixed missing parenthesis in classes/User.php
	* Removed unused files
	* fixed schema_validate.php (typos)

2005-04-01 Francois Proulx  <francois.proulx@gmail.com>
	* EVERYTHING IS NOW UTF-8 YOU MUST EDIT YOUR FILES WITH AN UTF-8 COMPLIANT EDITOR